changed order of gender

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                     <div class="col">
                       <div class="form-check form-check-inline border rounded py-2 px-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                        <label class="form-check-label" for="inlineRadio1">Male</label>
+                        <label class="form-check-label" for="inlineRadio1">Feale</label>
                       </div>
                       <div class="form-check form-check-inline border rounded py-2 px-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                        <label class="form-check-label" for="inlineRadio1">Female</label>
+                        <label class="form-check-label" for="inlineRadio1">Male</label>
                       </div>
                       <div class="form-check form-check-inline border rounded py-2 px-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
